[ADD] Add landing page and 404 page

--- a/src/styles/semantic.scss
+++ b/src/styles/semantic.scss
@@ -1,4 +1,7 @@
 // Import minified styles from semantic here
+@import '../../semantic/dist/components/site.min.css';
 @import '../../semantic/dist/components/button.min.css';
 @import '../../semantic/dist/components/icon.min.css';
 @import '../../semantic/dist/components/header.min.css';
+@import '../../semantic/dist/components/container.min.css';
+@import '../../semantic/dist/components/segment.min.css';
