--- a/src/styles/semantic.scss
+++ b/src/styles/semantic.scss
@@ -5,3 +5,6 @@
 @import '../../semantic/dist/components/header.min.css';
 @import '../../semantic/dist/components/container.min.css';
 @import '../../semantic/dist/components/segment.min.css';
+@import '../../semantic/dist/components/transition.min.css';
+@import '../../semantic/dist/components/menu.min.css';
+@import '../../semantic/dist/components/sidebar.min.css';
