--- a/src/app/styles/component-title--icon.scss
+++ b/src/app/styles/component-title--icon.scss
@@ -8,7 +8,7 @@ $block: component-title;
 	h1.ui.header {
 		padding-top: 15vh;
 
-		@media (min-width: 480px) {
+		@media (min-width: $bp-xs) {
 			padding-top: 20vh;
 		}
 	}
