[ADD] Add global view styling

--- a/src/app/styles/view-notFound.scss
+++ b/src/app/styles/view-notFound.scss
@@ -1,6 +1,10 @@
+@import 'view';
+
 $block: view-notFound;
 
 .#{$block} {
+	@include view;
+	
 	.#{$block}__button-container {
 		padding: 3rem 0 3rem 0;
 		text-align: center;
