[FIX] Fix scroll bars always showing

--- a/src/app/styles/component-sidebarMenu.scss
+++ b/src/app/styles/component-sidebarMenu.scss
@@ -3,7 +3,8 @@ $block: component-sidebarMenu;
 .#{$block} {
 	height: inherit;
 
-	.pusher {
+	&.pushable > .pusher {
 		height: 100vh;
+		overflow: auto;
 	}
 }
