[ADD] Add content to home view

--- a/src/app/styles/component-footer.scss
+++ b/src/app/styles/component-footer.scss
@@ -4,6 +4,7 @@ $block: component-footer;
 	height: 4rem;
 	color: white;
 	background-color: #233347;
+	margin-top: 2rem;
 
 	.#{$block}__text {
 		padding: 1rem;
