--- a/src/app/styles/_base.scss
+++ b/src/app/styles/_base.scss
@@ -51,3 +51,17 @@
 
 // You can also import ALL styles from Semantic-UI using this:
 // @import '../../semantic-ui/dist/semantic.min.css';
+
+
+div.base__code-snippet {
+	margin: .2rem 0 .5rem 0;
+	padding: 1rem;
+	font-family: monospace;
+	font-size: smaller;
+	background-color: #e9f2fc;
+
+	&--center {
+		@extend .base__code-snippet;
+		text-align: center;
+	}
+}
