[ADD] Add loading view to the lazy load component

--- a/src/assets/vendor.scss
+++ b/src/assets/vendor.scss
@@ -22,6 +22,7 @@
 @import '../semantic-ui/dist/components/image.min.css';
 @import '../semantic-ui/dist/components/tab.min.css';
 @import '../semantic-ui/dist/components/grid.min.css';
+@import '../semantic-ui/dist/components/loader.min.css';
 
 
 // Unused styles
@@ -34,7 +35,6 @@
 // @import '../semantic-ui/dist/components/feed.min.css';
 // @import '../semantic-ui/dist/components/item.min.css';
 // @import '../semantic-ui/dist/components/list.min.css';
-// @import '../semantic-ui/dist/components/loader.min.css';
 // @import '../semantic-ui/dist/components/nag.min.css';
 // @import '../semantic-ui/dist/components/popup.min.css';
 // @import '../semantic-ui/dist/components/progress.min.css';
