[REFACTOR] Rename component styles to start with capital letter

--- a/src/app/styles/component-title--icon.scss
+++ b/src/app/styles/component-title--icon.scss
@@ -1,6 +1,6 @@
-@import 'component-title';
+@import 'component-Title';
 
-$block: component-title;
+$block: component-Title;
 
 .#{$block}--icon {
 	@extend .#{$block};
