[ADD] Add nicer styling to top menu

--- a/src/app/styles/component-sidebarButton.scss
+++ b/src/app/styles/component-sidebarButton.scss
@@ -3,7 +3,7 @@
 $block: component-SidebarButton;
 
 button.ui.button.#{$block} {
-	@include bp-above(lg) {
+	@include bp-above(md) {
 		display: none !important;
 	}
 
