--- a/src/app/styles/component-TopMenu.scss
+++ b/src/app/styles/component-TopMenu.scss
@@ -1,11 +1,36 @@
 @import 'bp';
+@import 'variables';
 
 $block: component-TopMenu;
 
 .#{$block} {
 	display: none;
 
-	@include bp-above(lg) {
-		display: block;
+	@include bp-above(md) {
+		display: flex;
+		position: fixed;
+		z-index: 9999;
+		width: 100%;
+		background-color: $theme-color;
+		border-bottom: 1px solid rgba(0,0,0,0.1);
+		
+		.ui.menu {
+			border: none;
+			box-shadow: none;
+			background-color: rgba(0,0,0,0);
+
+			a.item {
+				color: white;
+
+				&:hover {
+					color: $theme-color-light;
+				}
+
+				&:active {
+					background-color: darken($theme-color, 5%);
+					color: $theme-color-highlight;
+				}
+			}
+		}
 	}
 }
