--- a/src/app/styles/component-TopMenu.scss
+++ b/src/app/styles/component-TopMenu.scss
@@ -8,7 +8,8 @@ $block: component-TopMenu;
 
 	@include bp-above(md) {
 		display: flex;
-		position: fixed;
+		position: sticky;
+		top: 0;
 		z-index: 9999;
 		width: 100%;
 		background-color: $theme-color;
