--- a/src/app/styles/component-TopMenu.scss
+++ b/src/app/styles/component-TopMenu.scss
@@ -13,6 +13,8 @@ $transition-time: 0.4s;
 		position: fixed;
 		z-index: 9999;
 		width: 100%;
+
+		transition: all 0.2s, background-color $transition-time;
 		
 		&.reduced {
 			background-color: $theme-color;
